[fix] page being wider than screen, resulting in bottom scrollbar #7

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 * {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
+    overflow: hidden;
 }
 
 ::selection {
